# NetworkChat

./: .gitignore  README.md
Client/: BottomWidget.cpp  BottomWidget.h  CMakeLists.txt  ClientWindow.cpp  ClientWindow.h  ListWidget.cpp  ListWidget.h  LogoWidget.cpp  LogoWidget.h  TopWidget.cpp  TopWidget.h  bottom_widget.cpp  bottom_widget.h  list_widget.cpp  list_widget.h  main.cpp
Client/headers/: bottom_widget.h  client_window.h  list_widget.h  logo_widget.h  top_widget.h
Client/sources/: bottom_widget.cpp  client_window.cpp  list_widget.cpp  logo_widget.cpp  main.cpp  top_widget.cpp
Client/tests/: test.cpp  tests.pro
Client/tests/tests.app/Contents/: Info.plist
Client/tests/tests.app/Contents/MacOS/: tests
Server/: CMakeLists.txt  Server.pro  ServerWindow.cpp  ServerWindow.h  main.cpp  server_window.cpp  server_window.h
Server/sources/: main.cpp  server_window.cpp
